--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -15,7 +15,7 @@
 	<h3 class="text-center p-2" style="color: #5bc0be">View All of Our Arts</h3>
 	<div class="row">
 		<% @arts.each do |art| %>
-			<div class="col card-boxes mt-4">	
+			<div class="col-sm-4 card-boxes mt-4">	
 				<%= link_to art_path(art), class:"text-decoration-none" do %>
 					<div class="card" style="width: 21rem;">
 						<% if art.photo.attached? %>
