--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -119,7 +119,9 @@ html {
 .card-image {
 	// height: 350px;
 	border-radius: 10px 10px 0 0;
-	// object-fit: scale-down;
+	width: 100%;
+	height: auto;
+	// object-fit: center;
     // object-cover: fill;
     // object-position: 50% 50%;
 }
